started adding color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
   <body>
     <header class="site-header">
       <div class="wrapper">
-	<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+	<a class="site-title" href="{{ site.baseurl }}/">
+   <img class="site-logo" src="{{ site.baseurl }}/assets/logos/sass-bites_logo.png" alt="logo">
+  </a>
 	<nav class="site-nav">
 	  <a href="#" class="menu-icon">
 	    <svg viewBox="0 0 18 15">
