--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -89,14 +89,16 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: $brand-color--primary;
     text-decoration: none;
+    transition-duration: .5s;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: darken($brand-color--primary, 15%);
     }
 
-    &:hover {
+    &:hover,
+    &:active {
         color: $text-color;
         text-decoration: underline;
     }
