--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,17 +10,22 @@
     position: relative;
 }
 
-.site-title {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
+// .site-title {
+//     font-size: 26px;
+//     line-height: 56px;
+//     letter-spacing: -1px;
+//     margin-bottom: 0;
+//     float: left;
 
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+//     &,
+//     &:visited {
+//         color: $grey-color-dark;
+//     }
+// }
+
+.site-logo {
+    max-width: 260px;
+    margin: 0 0 -4em 0;
 }
 
 .site-nav {
@@ -185,7 +190,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 36px;
 }
 
 
