--- a/css/main.scss
+++ b/css/main.scss
@@ -13,9 +13,11 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:           #111;
+$background-color:     #fdfdfd;
+$brand-color--primary: #f08741;
+$brand-color--primary: #c69;
+$brand-color--primary: #16112d;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
