--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: Signika, Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -16,8 +16,8 @@ $spacing-unit:     30px;
 $text-color:           #111;
 $background-color:     #fdfdfd;
 $brand-color--primary: #f08741;
-$brand-color--primary: #c69;
-$brand-color--primary: #16112d;
+$brand-color--secondary: #c69;
+$brand-color--tertiary: #16112d;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
