--- a/css/main.scss
+++ b/css/main.scss
@@ -13,8 +13,6 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:           #111;
-$background-color:     #fdfdfd;
 $brand-color--primary: #f08741;
 $brand-color--secondary: #c69;
 $brand-color--tertiary: #16112d;
@@ -22,6 +20,9 @@ $brand-color--tertiary: #16112d;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+
+$text-color:           $grey-color-light;
+$background-color:     $brand-color--tertiary;
 
 // Width of the content area
 $content-width:    800px;
